--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "chai-as-promised": "^6.0.0",
     "express": "^4.14.0",
     "mocha": "^3.1.2",
-    "protractor": "^4.0.10",
     "webdriver-manager": "^10.2.7"
+  },
+  "devDependencies": {
+    "protractor": "^4.0.14"
   }
 }
